--- a/styles.css
+++ b/styles.css
@@ -422,12 +422,46 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #1a202c;
+    transition: opacity 0.5s ease-out;
+}
+
+.loading-overlay.fade-out {
+    opacity: 0;
 }
 
 .loading-text {
     color: white;
     font-size: 1.5rem;
-    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+.progress-container {
+    width: 200px;
+    height: 40px;
+    position: relative;
+}
+
+.progress-bar {
+    width: 0%;
+    height: 10px;
+    background-color: #63b3ed;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    border-radius: 5px;
+    transition: width 0.3s ease-out;
+}
+
+.cat-tail {
+    width: 100%;
+    height: 40px;
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 20"><path d="M0,10 Q25,20 50,10 T100,10" fill="none" stroke="%2363b3ed" stroke-width="2"/></svg>');
+    background-repeat: repeat-x;
+    background-size: 50px 20px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    opacity: 0.3;
 }
 
 .cat-fact-loading {
