--- a/styles.css
+++ b/styles.css
@@ -422,11 +422,6 @@ body {
     align-items: center;
     justify-content: center;
     background-color: #1a202c;
-    transition: opacity 0.5s ease-out;
-}
-
-.loading-overlay.fade-out {
-    opacity: 0;
 }
 
 .loading-text {
@@ -436,28 +431,29 @@ body {
 }
 
 .progress-container {
-    width: 200px;
+    width: 80%;
+    max-width: 300px;
     height: 40px;
     position: relative;
 }
 
 .progress-bar {
     width: 0%;
-    height: 10px;
+    height: 4px;
     background-color: #63b3ed;
     position: absolute;
     bottom: 0;
     left: 0;
-    border-radius: 5px;
+    border-radius: 2px;
     transition: width 0.3s ease-out;
 }
 
 .cat-tail {
     width: 100%;
     height: 40px;
-    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 20"><path d="M0,10 Q25,20 50,10 T100,10" fill="none" stroke="%2363b3ed" stroke-width="2"/></svg>');
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 40"><path d="M0,20 Q25,40 50,20 T100,20" fill="none" stroke="%2363b3ed" stroke-width="4"/></svg>');
     background-repeat: repeat-x;
-    background-size: 50px 20px;
+    background-size: 100px 40px;
     position: absolute;
     bottom: 0;
     left: 0;
